maybe fix text cutoff

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -46,7 +46,6 @@
 }
 .aboutInfoContainer{
   width:50%;
-  padding-right: 2rem;
 }
 .pythonImageContainer{
   width:500px;
